--- a/Backend code/e-health/src/main/resources/application.properties
+++ b/Backend code/e-health/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/electronic_healthcare
 spring.datasource.username=root
-spring.datasource.password=mysql@1326
+spring.datasource.password=********
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=update
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=amitprasad1326@gmail.com
-spring.mail.password=arei kbwt pmxt rgoh
+spring.mail.password=*********
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
